--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -216,7 +216,7 @@
     align-items: center
     justify-content: center
     flex-wrap: wrap
-    margin-bottom: 15px
+    // margin-bottom: 15px
 
   &__tag
     font-size: 13px
@@ -230,6 +230,7 @@
     background-color: rgba(211, 206, 214, 0.16)
     border-radius: 4px
     margin-right: 15px
+    margin-bottom: 15px
     transition: color 0.3s, ease 0.3s
 
     &:hover
