--- a/marmelad/_blocks/article-thumb-detailed/article-thumb-detailed.styl
+++ b/marmelad/_blocks/article-thumb-detailed/article-thumb-detailed.styl
@@ -235,7 +235,7 @@
     display: flex
     align-items: center
     flex-wrap: wrap
-    margin-bottom: 15px
+    // margin-bottom: 15px
 
   &__tag
     font-size: 13px
@@ -249,6 +249,7 @@
     background-color: rgba(211, 206, 214, 0.16)
     border-radius: 4px
     margin-right: 15px
+    margin-bottom: 15px
     transition: color 0.3s, ease 0.3s
 
     &:hover
