--- a/marmelad/_blocks/podcast-thumb/podcast-thumb.styl
+++ b/marmelad/_blocks/podcast-thumb/podcast-thumb.styl
@@ -110,6 +110,7 @@
     padding-right: 10px
     padding-left: 10px
     position: relative
+
     &:before, &:after
       content: ''
       position: absolute
@@ -157,6 +158,7 @@
     background-color: rgba(211, 206, 214, 0.16)
     border-radius: 4px
     margin-right: 15px
+    margin-bottom: 15px
     transition: color 0.3s, ease 0.3s
 
     &:hover
