added other news block & form state

--- a/marmelad/_blocks/_footer/footer.styl
+++ b/marmelad/_blocks/_footer/footer.styl
@@ -113,6 +113,9 @@
             a
               color: #fff
 
+          &__success-text
+            color: #fff
+
         .social-links
           &__title
             color: #fff
