--- a/marmelad/_blocks/newsletter-form/newsletter-form.styl
+++ b/marmelad/_blocks/newsletter-form/newsletter-form.styl
@@ -1,4 +1,29 @@
 .newsletter-form
+  &._is-error
+    & ^[0]
+      &__field
+        @media (min-width: 1024px)
+          border: 2px solid rgba(247, 70, 52, 0.7)
+
+      &__input
+        input
+          @media (max-width: 1023px)
+            border: 2px solid rgba(247, 70, 52, 0.7)
+
+      &__error-text
+        display: block
+
+      &__error-icon
+        display: block
+
+  &._is-success
+    & ^[0]
+      &__success
+        display: flex
+
+      &__fields, &__note
+        display: none
+
   &__section
     padding: 50px 55px
     position: relative
@@ -44,7 +69,6 @@
       font-size: 28px
 
   &__fields
-    margin-bottom: 15px
     position: relative
     z-index: 2
 
@@ -67,19 +91,19 @@
 
     input
       font-size: 15px
-      color: #fff
+      color: #000
       font-weight: 500
       line-height: 1
       width: 100%
       height: 54px
-      padding-right: 100px
+      padding-right: 25px
       padding-left: 25px
       border: none
       background-color: transparent
       outline: none !important
       transition: color 1s, border-color 1s, ease 1s
 
-      @media (max-width: 1023px)  
+      @media (max-width: 1023px)
         background-color: rgba(211, 206, 214, 0.16)
         border-radius: 27px
 
@@ -93,10 +117,38 @@
       @media (max-width: 1279px)
         color: #fff
 
+  &__error-text
+    font-size: 15px
+    color: #F74634
+    font-weight: 500
+    line-height: 1.2
+    letter-spacing: 1px
+    margin-top: 10px
+    padding-left: 25px
+    display: none
+    position: relative
+    z-index: 5
+
+  &__error-icon
+    flex: 0 0 24px
+    width: 24px
+    max-width: 24px
+    height: 24px
+    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M12 2L1 21H23L12 2ZM12 5.99173L4.46889 19H19.5311L12 5.99173Z' fill='%231E0B2E'/%3E%3Cpath d='M13 17C13 17.5523 12.5523 18 12 18C11.4477 18 11 17.5523 11 17C11 16.4477 11.4477 16 12 16C12.5523 16 13 16.4477 13 17Z' fill='%231E0B2E'/%3E%3Cpath d='M11 10H13V15H11V10Z' fill='%231E0B2E'/%3E%3C/svg%3E%0A")
+    background-repeat: no-repeat
+    background-position: 0 0
+    display: none
+
+    @media (max-width: 1023px)
+      position: absolute
+      right: 15px
+      top: 15px
+
   &__button-ok
     width: 90px
     min-width: auto
     margin-left: 8px
+    margin-right: 4px
     transition: color 1s, border-color 1s, ease 1s
 
     @media (max-width: 1279px)
@@ -106,6 +158,7 @@
     @media (max-width: 1023px)
       width: 100%
       max-width: 100%
+      margin-right: 0
 
       &:hover
         &:after
@@ -125,6 +178,7 @@
     transition: color 1s, ease 1s
     position: relative
     z-index: 2
+    margin-top: 15px
 
     @media (max-width: 1279px)
       color: #fff
@@ -139,3 +193,29 @@
 
       &:hover
         text-decoration: underline
+
+  &__success
+    flex-direction: column
+    align-items: center
+    text-align: center
+    display: none
+    position: relative
+    z-index: 5
+
+  &__success-icon
+    width: 30px
+    height: 30px
+    background-image: url("data:image/svg+xml,%3Csvg width='30' height='30' viewBox='0 0 30 30' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M25.1384 10.2075L23.795 8.72584L14.4667 17.1835L10.1384 13.2592L8.79498 14.7408L14.4667 19.8832L25.1384 10.2075Z' fill='%231E0B2E'/%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M15 2C7.8203 2 2 7.8203 2 15C2 22.1797 7.8203 28 15 28C22.1797 28 28 22.1797 28 15C28 7.8203 22.1797 2 15 2ZM0 15C0 6.71573 6.71573 0 15 0C23.2843 0 30 6.71573 30 15C30 23.2843 23.2843 30 15 30C6.71573 30 0 23.2843 0 15Z' fill='%231E0B2E'/%3E%3C/svg%3E%0A")
+    margin-bottom: 15px
+
+  &__success-text
+    font-size: 13px
+    color: #000
+    font-weight: 500
+    line-height: 1.2
+    text-align: center
+    letter-spacing: 1px
+    max-width: 290px
+    margin-right: auto
+    margin-left: auto
+    transition: color 1s, ease 1s
