added font for symbol - @

--- a/marmelad/styles/components/fonts.styl
+++ b/marmelad/styles/components/fonts.styl
@@ -25,3 +25,24 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: 'Source Serif Pro';
+  src: url('../fonts/SourceSerifPro-SemiBold.woff2') format('woff2'),
+      url('../fonts/SourceSerifPro-SemiBold.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+  unicode-range: U+0040
+}
+
+@font-face {
+  font-family: 'Source Serif Pro';
+  src: url('../fonts/SourceSerifPro-Regular.woff2') format('woff2'),
+      url('../fonts/SourceSerifPro-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+  unicode-range: U+0040
+}
+
