--- a/marmelad/_blocks/editorial/editorial.styl
+++ b/marmelad/_blocks/editorial/editorial.styl
@@ -169,7 +169,7 @@
       a
         font-size: 20px
         color: #1E0B2E
-        font-family: $fonts.textFont
+        font-family: 'Source Serif Pro', $fonts.textFont
         font-weight: 500
         line-height: 1.3
         text-decoration: none
