--- a/marmelad/_blocks/our-contacts/our-contacts.styl
+++ b/marmelad/_blocks/our-contacts/our-contacts.styl
@@ -124,7 +124,7 @@
   &__email
     font-size: 28px
     color: #1E0B2E
-    font-family: $fonts.textFont
+    font-family: 'Source Serif Pro', $fonts.textFont
     font-weight: 400
     line-height: 1.1
     text-decoration: none
