--- a/marmelad/_blocks/search-result/search-result.styl
+++ b/marmelad/_blocks/search-result/search-result.styl
@@ -110,3 +110,34 @@
 
     &:hover
       text-decoration: none
+
+  &__not-found
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: center
+    text-align: center
+    padding-bottom: 150px
+
+    @media (max-width: 767)
+      padding-bottom: 75px
+
+  &__not-found-icon
+    max-width: 225px
+    width: 100%
+    height: 225px
+    margin-bottom: 5px
+
+  &__not-found-text
+    font-size: 14px
+    color: #1E0B2E
+    font-family: $fonts.additionalFont
+    font-weight: 400
+    line-height: 1.2
+    text-align: center
+    letter-spacing: 5px
+    text-transform: uppercase
+    max-width: 400px
+    width: 100%
+    padding-right: 8px
+    padding-left: 8px
