--- a/marmelad/_blocks/all-articles/all-articles.styl
+++ b/marmelad/_blocks/all-articles/all-articles.styl
@@ -3,31 +3,53 @@
   padding-bottom: 70px
   overflow: hidden
 
-  &__cols
-    display: flex
+  // &__cols
+  //   display: flex
 
-    @media (max-width: 1279px)
-      flex-direction: column
+  //   @media (max-width: 1279px)
+  //     flex-direction: column
 
-  &__col
-    flex: 0 0 385px
-    width: 385px
-    max-width: 385px
-    margin-right: 30px
+  // &__col
+  //   flex: 0 0 385px
+  //   width: 385px
+  //   max-width: 385px
+  //   margin-right: 30px
 
-    @media (max-width: 1279px)
-      flex: none
-      width: 100%
-      max-width: 100%
+  //   @media (max-width: 1279px)
+  //     flex: none
+  //     width: 100%
+  //     max-width: 100%
 
-    &:last-child
-      margin-right: 0
+  //   &:last-child
+  //     margin-right: 0
 
   &__items
-    @media (max-width: 1279px)
-      display: flex
-      flex-wrap: wrap
-      justify-content: center
+    // display: flex
+    // flex-wrap: wrap
+    // justify-content: space-between
+
+    // @media (max-width: 1279px)
+    //   display: flex
+    //   flex-wrap: wrap
+    //   justify-content: center
+
+    .grid-sizer, .grid-item
+      width: 33.333%
+
+      @media (max-width: 959px)
+        width: 50%
+      @media (max-width: 639px)
+        width: 100%
+
+    .grid-item
+      float: left
+      display flex
+      justify-content center
+
+    .grid:after
+      content: ''
+      display: block
+      clear: both  
 
   &__item
     margin-bottom: 70px
@@ -71,3 +93,5 @@
         // transform: scale(7) translate(-8%, -8%)
         width: 1300px
         height: 1300px
+
+  
