--- a/marmelad/_blocks/other-news/other-news.styl
+++ b/marmelad/_blocks/other-news/other-news.styl
@@ -144,3 +144,14 @@
         opacity: 1
         pointer-events: all
         transition: opacity 1s
+
+    .article-thumb
+      &:hover
+        .article-thumb__name
+          color #fff
+
+          &:before
+            background-image: url("data:image/svg+xml,%3Csvg width='8' height='89' viewBox='0 0 8 89' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.70297 1C2.97927 14.9237 1 29.5016 1 44.5C1 59.4984 2.97927 74.0607 6.70297 88' stroke='white' stroke-width='1.5' stroke-miterlimit='10'/%3E%3C/svg%3E%0A")
+
+          &:after
+            background-image: url("data:image/svg+xml,%3Csvg width='8' height='89' viewBox='0 0 8 89' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.15228 1C4.9705 14.9237 7 29.5016 7 44.5C7 59.4984 4.9705 74.0607 1.15228 88' stroke='white' stroke-width='1.5' stroke-miterlimit='10'/%3E%3C/svg%3E%0A")
