--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -128,6 +128,16 @@
     left: 50%
     transform: translateX(-50%)
     z-index: 3
+    border-radius: 50%
+    border: 3px solid #FFFFFF
+    overflow: hidden
+
+    img
+      vertical-align top
+      position absolute
+      top 50%
+      left 50%
+      transform: translate(-50%, -50%)
 
   &__name-video
     font-size: 14px
