--- a/marmelad/_blocks/podcast-thumb/podcast-thumb.styl
+++ b/marmelad/_blocks/podcast-thumb/podcast-thumb.styl
@@ -7,8 +7,23 @@
 
   &:hover
     & ^[0]
+      &__img-wrap
+        i
+          opacity: 1
+          visibility: visible
+
       &__name
         color: #9900FF
+
+        &:before, &:after
+          opacity: 1
+          visibility: visible
+
+        &:before
+          left: -5px
+
+        &:after
+          right: -5px
 
   &__body
     display: flex
@@ -48,6 +63,19 @@
       width: 216px
       height: 216px
       right: -32px
+
+    i
+      content: ''
+      position: absolute
+      left: 50%
+      bottom: -47px
+      transform: translateX(-50%)
+      width: 100%
+      height: 47px
+      background: radial-gradient(62.14% 168.18% at 50% -68.18%, #C300FF 0%, rgba(195, 0, 255, 0.88456) 5.21%, rgba(195, 0, 255, 0.148632) 63.54%, rgba(195, 0, 255, 0) 90.54%)
+      opacity: 0
+      visibility: hidden
+      transition: opacity 0.3s, ease 0.3s
 
   &__img
     width: 280px
@@ -96,7 +124,33 @@
     text-align: center
     text-transform: uppercase
     margin-bottom: 15px
+    position: relative
+    padding-right: 5px
+    padding-left: 5px
     transition: color 0.3s, ease 0.3s
+
+    &:before, &:after
+      content: ''
+      position: absolute
+      top: 50%
+      width: 8px
+      min-height: 50px
+      height: 100%
+      transform: translateY(-50%)
+      opacity: 0
+      visibility: hidden
+      background-repeat: no-repeat
+      background-position: 0 50%
+      background-size contain
+      transition: opacity 0.5s, left 0.5s, right 0.5s, ease 0.5s
+
+    &:before
+      left: -10px
+      background-image: url("data:image/svg+xml,%3Csvg width='8' height='89' viewBox='0 0 8 89' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.70297 1C2.97927 14.9237 1 29.5016 1 44.5C1 59.4984 2.97927 74.0607 6.70297 88' stroke='%239900FF' stroke-width='1.5' stroke-miterlimit='10'/%3E%3C/svg%3E%0A")
+
+    &:after
+      right: -10px
+      background-image: url("data:image/svg+xml,%3Csvg width='8' height='89' viewBox='0 0 8 89' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.15228 1C4.9705 14.9237 7 29.5016 7 44.5C7 59.4984 4.9705 74.0607 1.15228 88' stroke='%239900FF' stroke-width='1.5' stroke-miterlimit='10'/%3E%3C/svg%3E%0A")
 
   &__count-edition
     font-size: 24px
