--- a/marmelad/_blocks/other-news/other-news.styl
+++ b/marmelad/_blocks/other-news/other-news.styl
@@ -37,7 +37,10 @@
       width: 100%
       max-width: 100%
       text-align: center
+      padding-right: 16px
+      padding-left: 16px
       margin-bottom: 25px
+      margin-right: 0
 
   &__special-title
     margin-bottom: 15px
@@ -52,6 +55,12 @@
     line-height: 1.2
     text-transform: uppercase
     margin-bottom: 25px
+
+    @media (max-width: 1279px)
+      max-width: 900px
+      width: 100%
+      margin-right: auto
+      margin-left: auto
 
     @media (max-width: 767px)
       font-size: 28px
@@ -148,7 +157,7 @@
     .article-thumb
       &:hover
         .article-thumb__name
-          color #fff
+          color: #fff
 
           &:before
             background-image: url("data:image/svg+xml,%3Csvg width='8' height='89' viewBox='0 0 8 89' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.70297 1C2.97927 14.9237 1 29.5016 1 44.5C1 59.4984 2.97927 74.0607 6.70297 88' stroke='white' stroke-width='1.5' stroke-miterlimit='10'/%3E%3C/svg%3E%0A")
