--- a/marmelad/_blocks/category-menu/category-menu.styl
+++ b/marmelad/_blocks/category-menu/category-menu.styl
@@ -6,6 +6,7 @@
   height: 100vh
   background-color: #fff
   z-index: 100
+  display: none
   opacity: 0
   visibility: hidden
   transform: translateY(-50px)
