--- a/marmelad/_blocks/article-thumb/article-thumb.styl
+++ b/marmelad/_blocks/article-thumb/article-thumb.styl
@@ -58,6 +58,22 @@
         &:before
           display: block
 
+  &--video
+    & ^[0]
+      &__img
+        &:before
+          content: ''
+          position: absolute
+          top: 50%
+          left: 50%
+          width: 96px
+          height: 96px
+          transform: translate(-50%, -50%)
+          background-image: url("data:image/svg+xml,%3Csvg width='96' height='96' viewBox='0 0 96 96' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='48' cy='48' r='48' fill='white'/%3E%3Cpath d='M71.619 44.9798C73.6507 46.1528 73.6507 49.0854 71.619 50.2584L39.0476 69.0635C37.0158 70.2366 34.4761 68.7703 34.4761 66.4242L34.4761 28.814C34.4761 26.4679 37.0158 25.0016 39.0476 26.1747L71.619 44.9798Z' fill='%239900FF'/%3E%3C/svg%3E%0A")
+          background-repeat: no-repeat
+          background-size: contain
+          background-position: 0 0
+
   &__body
     display: flex
     flex-direction: column
@@ -133,10 +149,10 @@
     overflow: hidden
 
     img
-      vertical-align top
-      position absolute
-      top 50%
-      left 50%
+      vertical-align: top
+      position: absolute
+      top: 50%
+      left: 50%
       transform: translate(-50%, -50%)
 
   &__name-video
