--- a/marmelad/_blocks/other-news/other-news.styl
+++ b/marmelad/_blocks/other-news/other-news.styl
@@ -82,6 +82,13 @@
       @media (max-width: 479px)
         margin-top: -110px
 
+      &:hover
+        &:after
+          background-image: url("data:image/svg+xml,%3Csvg width='26' height='49' viewBox='0 0 26 49' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M24 2L3 24.5L24 47' stroke='%231E0B2E' stroke-width='4'/%3E%3C/svg%3E%0A")
+
+          @media (max-width: 767px)
+            background-image: url("data:image/svg+xml,%3Csvg width='16' height='31' viewBox='0 0 16 31' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15 1.5L1.93333 15.5L15 29.5' stroke='%231E0B2E' stroke-width='2'/%3E%3C/svg%3E%0A")
+
       &:after
         content: ''
         width: 26px
@@ -89,6 +96,7 @@
         background-repeat: no-repeat
         background-position: 0 0
         background-image: url("data:image/svg+xml,%3Csvg width='26' height='49' viewBox='0 0 26 49' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M24 2L3 24.5L24 47' stroke='white' stroke-width='4'/%3E%3C/svg%3E%0A")
+        transition: background 0.3s, ease 0.3s
 
         @media (max-width: 767px)
           width: 28px
@@ -103,6 +111,8 @@
 
       @media (max-width: 374px)
         left: 2px
+
+      
 
     .swiper-button-next
       right: 170px
@@ -148,7 +158,7 @@
       display: flex
       justify-content: center
 
-    &.swiper-slide-active, &.swiper-slide-next
+    &.swiper-slide-active, &.swiper-slide-next, &.swiper-slide-duplicate-active, &.swiper-slide-duplicate-next
       @media (min-width: 1280px)
         opacity: 1
         pointer-events: all
